--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <nav>
-            <img src="/img/Logo.png" alt="logo">
+            <img src="./img/Logo.png" alt="logo">
             <ul>
-                <li><img src="/img/Studio.png" alt="Studio"></li>
-                <li><img src="/img/Portfolio.png" alt="Portfolio"></li>
-                <li><img src="/img/Contacts.png" alt="Contacts"></li>
+                <li><img src="./img/Studio.png" alt="Studio"></li>
+                <li><img src="./img/Portfolio.png" alt="Portfolio"></li>
+                <li><img src="./img/Contacts.png" alt="Contacts"></li>
             </ul>
         </nav>
         <address>
@@ -55,47 +55,47 @@
             <h2>Our team</h2>
             <ul>
                 <li>
-                    <img src="/img/Mark.jpg" alt="">
+                    <img src="./img/Mark.jpg" alt="">
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                     <ul class="social-links">
-                        <li><a href="https://www.instagram.com/" target="_blank"><img src="/img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
-                        <li><a href="https://twitter.com/" target="_blank"><img src="/img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
-                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="/img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
+                        <li><a href="https://twitter.com/" target="_blank"><img src="./img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
+                        <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
+                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="./img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
                     </ul>
                 </li>
                 <li>
-                    <img src="/img/Tom.jpg" alt="">
+                    <img src="./img/Tom.jpg" alt="">
                     <h3>Tom Ford</h3>
                     <p>Frontend Developer</p>
                     <ul class="social-links">
-                        <li><a href="https://www.instagram.com/" target="_blank"><img src="/img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
-                        <li><a href="https://twitter.com/" target="_blank"><img src="/img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
-                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="/img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
+                        <li><a href="https://twitter.com/" target="_blank"><img src="./img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
+                        <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
+                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="./img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
                     </ul>
                 </li>
                 <li>
-                    <img src="/img/camila.jpg" alt="">
+                    <img src="./img/camila.jpg" alt="">
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                     <ul class="social-links">
-                        <li><a href="https://www.instagram.com/" target="_blank"><img src="/img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
-                        <li><a href="https://twitter.com/" target="_blank"><img src="/img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
-                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="/img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
+                        <li><a href="https://twitter.com/" target="_blank"><img src="./img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
+                        <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
+                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="./img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
                     </ul>
                 </li>
                 <li>
-                    <img src="/img/daniel.jpg" alt="">
+                    <img src="./img/daniel.jpg" alt="">
                     <h3>Daniel Wilson</h3>
                     <p>UI Designer</p>
                     <ul class="social-links">
-                        <li><a href="https://www.instagram.com/" target="_blank"><img src="/img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
-                        <li><a href="https://twitter.com/" target="_blank"><img src="/img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
-                        <li><a href="https://www.facebook.com/" target="_blank"><img src="/img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
-                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="/img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
+                        <li><a href="https://www.instagram.com/" target="_blank"><img src="./img/Insta-logo.png" alt="Instagram" width="40" height="40"></a></li>
+                        <li><a href="https://twitter.com/" target="_blank"><img src="./img/Twitter-logo.png" alt="Twitter" width="40" height="40"></a></li>
+                        <li><a href="https://www.facebook.com/" target="_blank"><img src="./img/Facebook-logo.png" alt="Facebook" width="40" height="40"></a></li>
+                        <li><a href="https://www.linkedin.com/" target="_blank"><img src="./img/Linkedn-logo.png" alt="LinkedIn" width="40" height="40"></a></li>
                     </ul>
                 </li>
             </ul>
@@ -104,7 +104,7 @@
     
     <footer>
         <section>
-            <img src="/img/Logo.png" alt="logo">
+            <img src="./img/Logo.png" alt="logo">
             <p>Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
         </section>
     </footer>
