--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
       <nav>
         <a href="./index.html">WebStudio</a>
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
-          <li><a href="">Contacts</a></li>
+          <a href="">Studio</a>
+          <a href="">Portfolio</a>
+          <a href="">Contacts</a>
         </ul>
+        <address>
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+          </ul>
+        </address>
       </nav>
-      <address>
-        <ul>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-        </ul>
-      </address>
     </header>
 
     <main>
@@ -30,27 +30,213 @@
       </section>
 
       <section>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
+      </section>
+
+      <section>
+        <h2>1</h2>
         <h2>Our team</h2>
         <ul>
           <li>
-            <img src="./img/Mark.jpg" alt="Mark Guerrero" width="264" />
+            <img src="./img/Mark.jpg" alt="" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
+            <ul class="social-links">
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img
+                    src="./img/Insta-logo.png"
+                    alt="Instagram"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/" target="_blank"
+                  ><img
+                    src="./img/Twitter-logo.png"
+                    alt="Twitter"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img
+                    src="./img/Facebook-logo.png"
+                    alt="Facebook"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img
+                    src="./img/Linkedn-logo.png"
+                    alt="LinkedIn"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
-            <img src="./img/Tom.jpg" alt="Tom Ford" width="264" />
+            <img src="./img/Tom.jpg" alt="" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
+            <ul class="social-links">
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img
+                    src="./img/Insta-logo.png"
+                    alt="Instagram"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/" target="_blank"
+                  ><img
+                    src="./img/Twitter-logo.png"
+                    alt="Twitter"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img
+                    src="./img/Facebook-logo.png"
+                    alt="Facebook"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img
+                    src="./img/Linkedn-logo.png"
+                    alt="LinkedIn"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
-            <img src="./img/camila.jpg" alt="Camila Garcia" width="264" />
+            <img src="./img/camila.jpg" alt="" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
+            <ul class="social-links">
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img
+                    src="./img/Insta-logo.png"
+                    alt="Instagram"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/" target="_blank"
+                  ><img
+                    src="./img/Twitter-logo.png"
+                    alt="Twitter"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img
+                    src="./img/Facebook-logo.png"
+                    alt="Facebook"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img
+                    src="./img/Linkedn-logo.png"
+                    alt="LinkedIn"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+            </ul>
           </li>
           <li>
-            <img src="./img/daniel.jpg" alt="Daniel Wilson" width="264" />
+            <img src="./img/daniel.jpg" alt="" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
+            <ul class="social-links">
+              <li>
+                <a href="https://www.instagram.com/" target="_blank"
+                  ><img
+                    src="./img/Insta-logo.png"
+                    alt="Instagram"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://twitter.com/" target="_blank"
+                  ><img
+                    src="./img/Twitter-logo.png"
+                    alt="Twitter"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.facebook.com/" target="_blank"
+                  ><img
+                    src="./img/Facebook-logo.png"
+                    alt="Facebook"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+              <li>
+                <a href="https://www.linkedin.com/" target="_blank"
+                  ><img
+                    src="./img/Linkedn-logo.png"
+                    alt="LinkedIn"
+                    width="40"
+                    height="40"
+                /></a>
+              </li>
+            </ul>
           </li>
         </ul>
       </section>
