--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <address>
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+110001111111">+11(000)111-11-11</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
         </ul>
       </address>
     </header>
@@ -30,6 +30,7 @@
       </section>
 
       <section>
+        <h2>1</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -63,11 +64,10 @@
       </section>
 
       <section>
-        <h2>1</h2>
         <h2>Our team</h2>
         <ul>
           <li>
-            <img src="./img/Mark.jpg" alt="" />
+            <img src="./images/Mark.jpg" alt="mark" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
             <ul class="social-links">
@@ -110,7 +110,7 @@
             </ul>
           </li>
           <li>
-            <img src="./img/Tom.jpg" alt="" />
+            <img src="./images/Tom.jpg" alt="tom" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
             <ul class="social-links">
@@ -153,7 +153,7 @@
             </ul>
           </li>
           <li>
-            <img src="./img/camila.jpg" alt="" />
+            <img src="./images/camila.jpg" alt="camila" width="264" />
             <h3>Camila Garcia</h3>
             <p>Marketing</p>
             <ul class="social-links">
@@ -196,7 +196,7 @@
             </ul>
           </li>
           <li>
-            <img src="./img/daniel.jpg" alt="" />
+            <img src="./images/daniel.jpg" alt="daniel" width="264" />
             <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
             <ul class="social-links">
