--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               <li>
                 <a href="https://www.instagram.com/" target="_blank"
                   ><img
-                    src="./img/Insta-logo.png"
+                    src="./images/Insta-logo.png"
                     alt="Instagram"
                     width="40"
                     height="40"
@@ -83,7 +83,7 @@
               <li>
                 <a href="https://twitter.com/" target="_blank"
                   ><img
-                    src="./img/Twitter-logo.png"
+                    src="./images/Twitter-logo.png"
                     alt="Twitter"
                     width="40"
                     height="40"
@@ -92,7 +92,7 @@
               <li>
                 <a href="https://www.facebook.com/" target="_blank"
                   ><img
-                    src="./img/Facebook-logo.png"
+                    src="./images/Facebook-logo.png"
                     alt="Facebook"
                     width="40"
                     height="40"
@@ -101,7 +101,7 @@
               <li>
                 <a href="https://www.linkedin.com/" target="_blank"
                   ><img
-                    src="./img/Linkedn-logo.png"
+                    src="./images/Linkedn-logo.png"
                     alt="LinkedIn"
                     width="40"
                     height="40"
@@ -117,7 +117,7 @@
               <li>
                 <a href="https://www.instagram.com/" target="_blank"
                   ><img
-                    src="./img/Insta-logo.png"
+                    src="./images/Insta-logo.png"
                     alt="Instagram"
                     width="40"
                     height="40"
@@ -126,7 +126,7 @@
               <li>
                 <a href="https://twitter.com/" target="_blank"
                   ><img
-                    src="./img/Twitter-logo.png"
+                    src="./images/Twitter-logo.png"
                     alt="Twitter"
                     width="40"
                     height="40"
@@ -135,7 +135,7 @@
               <li>
                 <a href="https://www.facebook.com/" target="_blank"
                   ><img
-                    src="./img/Facebook-logo.png"
+                    src="./images/Facebook-logo.png"
                     alt="Facebook"
                     width="40"
                     height="40"
@@ -144,7 +144,7 @@
               <li>
                 <a href="https://www.linkedin.com/" target="_blank"
                   ><img
-                    src="./img/Linkedn-logo.png"
+                    src="./images/Linkedn-logo.png"
                     alt="LinkedIn"
                     width="40"
                     height="40"
@@ -160,7 +160,7 @@
               <li>
                 <a href="https://www.instagram.com/" target="_blank"
                   ><img
-                    src="./img/Insta-logo.png"
+                    src="./images/Insta-logo.png"
                     alt="Instagram"
                     width="40"
                     height="40"
@@ -169,7 +169,7 @@
               <li>
                 <a href="https://twitter.com/" target="_blank"
                   ><img
-                    src="./img/Twitter-logo.png"
+                    src="./images/Twitter-logo.png"
                     alt="Twitter"
                     width="40"
                     height="40"
@@ -178,7 +178,7 @@
               <li>
                 <a href="https://www.facebook.com/" target="_blank"
                   ><img
-                    src="./img/Facebook-logo.png"
+                    src="./images/Facebook-logo.png"
                     alt="Facebook"
                     width="40"
                     height="40"
@@ -187,7 +187,7 @@
               <li>
                 <a href="https://www.linkedin.com/" target="_blank"
                   ><img
-                    src="./img/Linkedn-logo.png"
+                    src="./images/Linkedn-logo.png"
                     alt="LinkedIn"
                     width="40"
                     height="40"
@@ -203,7 +203,7 @@
               <li>
                 <a href="https://www.instagram.com/" target="_blank"
                   ><img
-                    src="./img/Insta-logo.png"
+                    src="./images/Insta-logo.png"
                     alt="Instagram"
                     width="40"
                     height="40"
@@ -212,7 +212,7 @@
               <li>
                 <a href="https://twitter.com/" target="_blank"
                   ><img
-                    src="./img/Twitter-logo.png"
+                    src="./images/Twitter-logo.png"
                     alt="Twitter"
                     width="40"
                     height="40"
@@ -221,7 +221,7 @@
               <li>
                 <a href="https://www.facebook.com/" target="_blank"
                   ><img
-                    src="./img/Facebook-logo.png"
+                    src="./images/Facebook-logo.png"
                     alt="Facebook"
                     width="40"
                     height="40"
@@ -230,7 +230,7 @@
               <li>
                 <a href="https://www.linkedin.com/" target="_blank"
                   ><img
-                    src="./img/Linkedn-logo.png"
+                    src="./images/Linkedn-logo.png"
                     alt="LinkedIn"
                     width="40"
                     height="40"
