--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <https://cdn.jsdelivr.net/npm/modern-normalize@1.1.0/modern-normalize.min.css>">
+    <link rel="stylesheet" href="/css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <header>
@@ -26,7 +34,7 @@
     <main>
       <section class="hero-image">
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <button class="but" type="button">Order Service</button>
       </section>
 
       <section>
@@ -237,6 +245,43 @@
                 /></a>
               </li>
             </ul>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Our Portfolio</h2>
+        <ul>
+          <li>
+            <img src="./images/imgbankingapp.jpg" alt="bankingapp" />
+            <h3>Banking App</h3>
+            <p>App</p>
+          </li>
+          <li>
+            <img src="./images/imgcashpay.jpg" alt="cashpayment" />
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/imgmeditapp.jpg" alt="meditationapp" />
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </li>
+        </ul>
+        <ul>
+          <li>
+            <img src="./images/imgtaxi.jpg" alt="taxiservise" />
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./images/imgscreen.jpg" alt="screenillustrations" />
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </li>
+          <li>
+            <img src="./images/imgcourses.jpg" alt="onlinecourses" />
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
           </li>
         </ul>
       </section>
