--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
           >WebStudio<span class="studio">Studio</span></a
         >
         <ul>
-          <li><a href="">Studio</a></li>
-          <li><a href="">Portfolio</a></li>
+          <li><a href="./index.html" class="link-home">Studio</a></li>
+          <li><a href="" class="link-first">Portfolio</a></li>
           <li><a href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="address-info">
         <ul>
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
