--- a/index.html
+++ b/index.html
@@ -251,39 +251,59 @@
         </ul>
       </section>
       <section>
-        <h2>Our Portfolio</h2>
-        <ul>
+        <h2 class="portfolio-heading">Our Portfolio</h2>
+        <ul class="portfolio-list">
           <li>
-            <img src="./images/imgbankingapp.jpg" alt="bankingapp" />
-            <h3>Banking App</h3>
-            <p>App</p>
+            <img
+              src="./images/imgbankingapp.jpg"
+              alt="Banking App"
+              width="360"
+            />
+            <h3 class="portfolio-title">Banking App</h3>
+            <p class="portfolio-description">App</p>
           </li>
           <li>
-            <img src="./images/imgcashpay.jpg" alt="cashpayment" />
-            <h3>Cashless Payment</h3>
-            <p>Marketing</p>
+            <img
+              src="./images/imgcashpay.jpg"
+              alt="Cashless Payment"
+              width="360"
+            />
+            <h3 class="portfolio-title">Cashless Payment</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
-            <img src="./images/imgmeditapp.jpg" alt="meditationapp" />
-            <h3>Meditation App</h3>
-            <p>App</p>
+            <img
+              src="./images/imgmeditapp.jpg"
+              alt="Meditation App"
+              width="360"
+            />
+            <h3 class="portfolio-title">Meditation App</h3>
+            <p class="portfolio-description">App</p>
           </li>
         </ul>
-        <ul>
+        <ul class="portfolio-list">
           <li>
-            <img src="./images/imgtaxi.jpg" alt="taxiservise" />
-            <h3>Taxi Service</h3>
-            <p>Marketing</p>
+            <img src="./images/imgtaxi.jpg" alt="Taxi Service" width="360" />
+            <h3 class="portfolio-title">Taxi Service</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
           <li>
-            <img src="./images/imgscreen.jpg" alt="screenillustrations" />
-            <h3>Screen Illustrations</h3>
-            <p>Design</p>
+            <img
+              src="./images/imgscreen.jpg"
+              alt="Screen Illustrations"
+              width="360"
+            />
+            <h3 class="portfolio-title">Screen Illustrations</h3>
+            <p class="portfolio-description">Design</p>
           </li>
           <li>
-            <img src="./images/imgcourses.jpg" alt="onlinecourses" />
-            <h3>Online Courses</h3>
-            <p>Marketing</p>
+            <img
+              src="./images/imgcourses.jpg"
+              alt="Online Courses"
+              width="360"
+            />
+            <h3 class="portfolio-title">Online Courses</h3>
+            <p class="portfolio-description">Marketing</p>
           </li>
         </ul>
       </section>
